--- a/website/templates/votacao.html
+++ b/website/templates/votacao.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Votacao {% endblock%}
+{% block title %} Resultados {% endblock%}
 {% block content %}
 <h1>Resultados da Votação</h1>
 <h2>Votos Totais: {{ total_votos }}</h2>
