--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,9 +15,11 @@
       crossorigin="anonymous"
     />
     <title>{% block title %}Home{% endblock %}</title>
+    <link rel="stylesheet" href="../static/base.css">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body>  
+    <nav class="navbar navbar-expand-lg navbar-dark" id="container-header">
+      
         <button 
         class="navbar-toggler" 
         type="button" 
@@ -27,18 +29,18 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
-            <div class="navbar-nav">
+            <div class="navbar-nav" >
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link" id="home" href="/">Home</a>
-                <a class="nav-item nav-link" id="votação" href="/votacao">Resultados</a>
-                <!-- <a class="nav-item nav-link" id="logout" href="/logout">Logout</a> -->
-                {% else %}
-                <!--<a class="nav-item nav-link" id="login" href="/login">Login</a>-->
-                <a class="nav-item nav-link" id="signUp" href="/sign-up">Votar</a>
+                <a class="nav-item nav-link home" id="home" href="/">Votar</a>
+                <a class="nav-item nav-link home" id="votacao" href="/votacao">Resultados</a>
+                {% else %}               
+                <a class="nav-item nav-link home" id="signUp" href="/sign-up">Entrar</a>
+                <a class="nav-item nav-link home" id="votacao" href="/votacao">Resultados</a>
                 {% endif %}
             </div>
         </div>
     </nav>
+
 
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
@@ -64,6 +66,7 @@
   
     <div class="container">
         {% block content %} {% endblock %}
+        
     </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
