--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,27 +1,60 @@
 {% extends "base.html" %} 
-{% block title %} Home {% endblock%}
+{% block title %} Votar {% endblock %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4 centered-element" id="container-grupos" align="center" >
     <form method="POST">
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="grupo" id="grupo1" value="grupo1">
-            <label class="form-check-label" for="grupo1">Grupo 1</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="grupo" id="grupo2" value="grupo2">
-            <label class="form-check-label" for="grupo2">Grupo 2</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="grupo" id="grupo3" value="grupo3">
-            <label class="form-check-label" for="grupo3">Grupo 3</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="grupo" id="grupo4" value="grupo4">
-            <label class="form-check-label" for="grupo4">Grupo 4</label>
-        </div>
+
+        <section class="container-section2">
+
+            <div class="form-check form-check-inline" onclick="document.getElementById('grupo1').checked = true;">
+                <div class="card" style="cursor:pointer;">
+                    <div class="title-wrap">
+                    <h2>GRUPO 1</h2>
+                    </div>
+                    <input class="form-check-input" type="radio" name="grupo" id="grupo1" value="grupo1">
+                    <label class="form-check-label" for="grupo1"></label>
+                </div>
+            </div>
+
+            <div class="form-check form-check-inline" onclick="document.getElementById('grupo2').checked = true;">
+                <div class="card" style="cursor:pointer;">
+                    <div class="title-wrap">
+                    <h2>GRUPO 2</h2>
+                    </div>
+                    <input class="form-check-input" type="radio" name="grupo" id="grupo2" value="grupo2">
+                    <label class="form-check-label" for="grupo2"></label>
+                </div>
+            </div>
+
+        </section>
+    
+        <section class="container-section3">
+
+            <div class="form-check form-check-inline" onclick="document.getElementById('grupo3').checked = true;">
+                <div class="card" style="cursor:pointer;">
+                    <div class="title-wrap">
+                    <h2>GRUPO 3</h2>
+                    </div>
+                    <input class="form-check-input" type="radio" name="grupo" id="grupo3" value="grupo3">
+                    <label class="form-check-label" for="grupo3"></label>
+                </div>
+            </div>
+
+            <div class="form-check form-check-inline" onclick="document.getElementById('grupo4').checked = true;">
+                <div class="card" style="cursor:pointer;">
+                    <div class="title-wrap">
+                    <h2>GRUPO 4</h2>
+                    </div>
+                    <input class="form-check-input" type="radio" name="grupo" id="grupo4" value="grupo4">
+                    <label class="form-check-label" for="grupo4"></label>
+                </div>
+            </div>
+            
+        </section>
+       
         <br/>
-        <button type="submit" class="btn btn-primary">Enviar Voto</button>
+        <button type="submit" class="btn btn-primary" id="container-enviar">ENVIAR VOTO</button>
     </form>
 </div>
 {% endblock %}
