--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <form method="POST">
-    <h3 align="center">Votar</h3>
+    <h3 align="center">Entrar</h3>
     <div class="form-group">
         <label for="email">Email</label>
         <input 
@@ -18,13 +18,13 @@
         <label for="text">Nome</label>
         <input 
         type="text" 
-        class="form-control" 
+        class="form-control input-wrapper" 
         id="firstName" 
         name="firstName" 
         placeholder="Inserir Nome"
         />
     </div>
     <br>
-    <button type="submit" class="btn btn-primary">Entrar</button>
+    <button type="submit" class="btn" id="button-entrar">Entrar</button>
 </form>
 {% endblock %}
