--- a/website/templates/votacao.html
+++ b/website/templates/votacao.html
@@ -1,15 +1,18 @@
 {% extends "base.html" %}
 {% block title %} Resultados {% endblock%}
 {% block content %}
-<h1>Resultados da Votação</h1>
-<h2>Votos Totais: {{ total_votos }}</h2>
-<div>
+<h1 class="h1-votacao">Resultados da Votação</h1>
+<div class="main-card">
+  <div class="flex-wrap row container-cards">
 {% for grupo, contagem in contagem_por_grupo %}
-      <div>
-        Grupo: {{ grupo }}
-        Votos: {{ contagem }}
-        Porcentagem: {{ '%.2f' % ((contagem/total_votos) * 100) }}
+    <div class="p-2 cards container-wrap-card" >
+        <div class="card-body">
+          <h5 class="card-title">GRUPO: {{ grupo }}</h5>
+          <p class="card-text" id="votos">VOTOS: {{ contagem }}</p>
+          <p class="card-text" id="porcentagem">Porcentagem dos Votos: {{ '%.2f' % ((contagem/total_votos) * 100) }}%</p>
         </div>
+    </div>
     {% endfor %}
-</div>
+  </div>
+  </div>
 {% endblock %}
