--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -17,7 +17,8 @@
     <title>{% block title %}Home{% endblock %}</title>
     <link rel="stylesheet" href="../static/base.css">
 </head>
-<body>  
+<body>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark" id="container-header">
       
         <button 
@@ -40,8 +41,6 @@
             </div>
         </div>
     </nav>
-
-
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
       {% for category, message in messages %}
@@ -63,11 +62,13 @@
     {% endfor %}
     {% endif %}
     {% endwith %}
-  
+  </header>
+  <main>
     <div class="container">
         {% block content %} {% endblock %}
         
     </div>
+  </main>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
