--- a/website/static/base.css
+++ b/website/static/base.css
@@ -7,7 +7,11 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
   text-decoration: none;
+  margin: 0;
+}
 
+main{
+  margin-bottom: 10rem;
 }
 
 #container-header {
@@ -21,16 +25,57 @@
 
 }
 
+.entrar-header{
+  color: white;
+}
+
+
+.form-group{
+
+  color: white;
+
+}
+
+.container-form{
+
+  background-color: rgba(238, 118, 6, 0.651);
+  border-style: solid;
+  border-width: 0.15rem;
+  padding: 5rem;
+  border-radius: 2rem;
+  border-color: rgb(255, 255, 255);
+  margin-top: 10rem;
+
+}
+
+.btn{
+
+  color: white;
+
+}
 .home{
   
   font-size: 1.5rem;
+
+}
+
+.h1-votacao{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+
 }
 
 #button-entrar {
-
-  background-color: rgba(238, 118, 6, 0.418); 
-
+  background-color: rgb(255, 255, 255); 
+  border-color: rgb(255, 255, 255);
+  border-width: 1px;
+  color: black;
 }
+
 
 #container-grupos{
   
@@ -57,8 +102,6 @@
   height: 10rem;
   border-color: rgb(255, 132, 0);
 
-
-
 }
 
 .container-section2{
@@ -75,16 +118,14 @@
 
 .container-section3{
 
- display: flex;
+  display: flex;
   color: white;
   margin-top: 10rem;
   justify-content: center;
   align-items: center;
   gap: 10rem;
 
-
 }
-
 
 #container-enviar{
   font-size: 1.5rem;
@@ -97,46 +138,47 @@
 
 }
 
-
 body {
+
   background-image: url(./img/Captura\ de\ tela\ 2023-11-11\ 191337.png);
   background-position: absolute;
   background-size: cover; 
+  background-repeat: no-repeat;
+
 }
 
-body img{
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: all 0.4s ease;
-  filter: blur(10px);
-}
 .main-card{
+
     display: flex;
     text-align: center;
     justify-content: center;
+
 }
+
 .container-wrap-card{
 
-    display: flex;
-    background-color: rgba(238, 118, 6, 0.418);
+    display: inline-block;
     text-align: center;
     align-items: center;
     margin-top: 6rem;
-    border-top-right-radius: 5rem;
-    border-bottom-left-radius: 5rem;
-    width:15rem;
-    height: 10rem;
     margin-right: 2.5rem;
     margin-left: 2.5rem;
+    color: white;
 
 }
-.card-body{
-    padding: 0, 2rem,0 ,2rem;
+
+.card-text{
+  font-size: medium;
 }
+
+.card-body{
+
+    padding: 0, 2rem,0 ,2rem;
+
+}
+
 .cards{
+
     display: flex;
     color: white;
     justify-content: center;
@@ -144,8 +186,190 @@ body img{
     padding: 5rem;
     margin-top: 15rem;
     gap: 10rem;
+
 }
 
+
+
 .card-text{
+
   margin: 0;
+
+}
+
+.container-cards{
+  justify-content: center;
+}
+
+.container-p{
+
+gap: 20rem;
+
+
+}
+
+.container-p h3{
+
+display: flex;
+
+}
+
+
+
+.icons{
+
+  display: flex;
+  flex-direction: column;
+  padding: 1.2rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+
+}
+
+
+@media (max-width:1220px) {
+
+  body{
+
+    background-size: cover;
+    background-position: absolute;
+    height: 62rem;
+    width: 100%;
+
+  }
+  .container-footer{
+
+    margin-top: 13.1rem;
+
+  }
+
+}
+
+@media (max-width:380px) {
+
+  body{
+
+        height: 60rem;
+
+  }
+
+  .container-footer{
+
+    margin-top: 10rem;
+
+  }
+
+}
+
+
+@media (max-width:322px) {
+
+  body{
+
+        height: 60rem;
+
+  }
+
+  .container-footer{
+
+    margin-top: 10rem;
+
+  }
+
+}
+@media (max-width:320px) {
+
+  body{
+
+        height: 55rem;
+
+  }
+
+  .container-footer{
+
+    margin-top: 3.5rem;
+
+  }
+
+}
+@media (max-width:300px) {
+
+  body{
+
+        height: 55rem;
+
+  }
+
+  .container-footer{
+
+    margin-top: 3rem;
+
+  }
+
+}
+
+@media (max-width:299px) {
+
+  body{
+
+        height: 63rem;
+
+  }
+
+  .container-footer{
+
+    margin-top: 10rem;
+
+  }
+
+}
+
+@media (max-width:297px) {
+
+  body{
+
+        height: 64rem;
+
+  }
+
+  .container-footer{
+
+    margin-top: 10rem;
+
+  }
+
+}
+
+.h2-votacao {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; /* Largura total */
+  background-color: var(--main-color);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  padding: 1rem 0;
+}
+
+.container-footer {
+
+  background-color: rgba(238, 118, 6, 0.418);
+  border-radius: 1rem;
+  margin-top: 5rem;
+  padding: 1rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.container-footer .container-p {
+
+  gap: 20rem;
+
+
 }
