--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -14,39 +14,48 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="../static/base.css" />
     <title>{% block title %}Home{% endblock %}</title>
-    <link rel="stylesheet" href="../static/base.css">
-</head>
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark" id="container-header">
-      
-        <button 
-        class="navbar-toggler" 
-        type="button" 
-        data-toggle="collapse" 
-        data-target="#navbar"
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark" id="container-header">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbar"
         >
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
-            <div class="navbar-nav" >
-                {% if user.is_authenticated %}
-                <a class="nav-item nav-link home" id="home" href="/">Votar</a>
-                <a class="nav-item nav-link home" id="votacao" href="/votacao">Resultados</a>
-                {% else %}               
-                <a class="nav-item nav-link home" id="signUp" href="/sign-up">Entrar</a>
-                <a class="nav-item nav-link home" id="votacao" href="/votacao">Resultados</a>
-                {% endif %}
-            </div>
+          <div class="navbar-nav">
+            {% if user.is_authenticated %}
+            <a class="nav-item nav-link home" id="home" href="/">Votar</a>
+            <a class="nav-item nav-link home" id="resultado" href="/resultado"
+              >Resultados</a
+            >
+            {% else %}
+            <a class="nav-item nav-link home" id="signUp" href="/sign-up"
+              >Entrar</a
+            >
+            <a class="nav-item nav-link home" id="resultado" href="/resultado"
+              >Resultados</a
+            >
+            {% endif %}
+          </div>
         </div>
-    </nav>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-      {% for category, message in messages %}
-      {% if category == 'error' %}
-      <div class="alert alert-danger alter-dismissable fade show" role="alert">
-        {{ message }}
+      </nav>
+    </header>
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %} {% for category, message in messages %} {% if category ==
+    'error' %}
+    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+      {{ message }}
       <button type="button" class="close" data-dismiss="alert">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -58,17 +67,10 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-      {% endif %}
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-  </header>
-  <main>
-    <div class="container">
-        {% block content %} {% endblock %}
-        
-    </div>
-  </main>
+    {% endif %} {% endfor %} {% endif %} {% endwith %}
+
+    <main class="container">{% block content %} {% endblock %}</main>
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -84,10 +86,9 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-
     <script>
-        type="text/javascript"
-        src="{{ url_for('static', filename='index.js') }}"
+      type = "text/javascript";
+      src = "{{ url_for('static', filename='index.js') }}";
     </script>
-</body>
+  </body>
 </html>
