--- a/website/templates/resultado.html
+++ b/website/templates/resultado.html
@@ -20,10 +20,10 @@ content %}
     <p>
       Matheus Dias Landim <br />
       Jean Victor Rodrigues Pereira<br />
+      Vicente Henrique de Oliveira <br />
       Pablo Henrique Gonçalves <br />
       Artur Machado Dias <br />
-      Luan Cristian <br />
-      Vicente Henrique de Oliveira
+      Luan Cristian
     </p>
   </div>
 
