--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -7,14 +7,14 @@ content %}
 >
   <form class="form" method="POST">
     <section class="container-section2">
-      <h2 class="h2-votacao">Selecione um grupo</h2>
+      <h1 class="h2-votacao"> Projeto Cerrado à Mesa: Celebrando a agroindústria familiar <br> </h1>
       <div
         class="form-check form-check-inline"
         onclick="document.getElementById('grupo1').checked = true;"
       >
         <div class="card" style="cursor: pointer">
           <div class="title-wrap">
-            <h2>GRUPO 1</h2>
+            <h3>Grupo 1</h3>
           </div>
           <input
             class="form-check-input"
@@ -33,7 +33,7 @@ content %}
       >
         <div class="card" style="cursor: pointer">
           <div class="title-wrap">
-            <h2>GRUPO 2</h2>
+            <h3>Grupo 2</h3>
           </div>
           <input
             class="form-check-input"
@@ -54,7 +54,7 @@ content %}
       >
         <div class="card" style="cursor: pointer">
           <div class="title-wrap">
-            <h2>GRUPO 3</h2>
+            <h3>Grupo 3</h3>
           </div>
           <input
             class="form-check-input"
@@ -73,7 +73,7 @@ content %}
       >
         <div class="card" style="cursor: pointer">
           <div class="title-wrap">
-            <h2>GRUPO 4</h2>
+            <h3>Grupo 4</h3>
           </div>
           <input
             class="form-check-input"
@@ -89,7 +89,7 @@ content %}
 
     <br />
     <button type="submit" class="btn btn-primary" id="container-enviar">
-      ENVIAR VOTO
+      Enviar Voto
     </button>
   </form>
 </div>
