--- a/website/static/base.css
+++ b/website/static/base.css
@@ -16,19 +16,21 @@ main{
 
 #container-header {
   
-  background-color: rgba(238, 118, 6, 0.418);
+  background-color: rgba(238, 118, 6, 0.753);
   border-color: rgb(255, 132, 0);
   display: flex;
   text-align: center;
+  width: 100%;
   align-items: center;
   justify-content: center;
 
 }
 
 .entrar-header{
-  color: white;
-}
 
+  color: white;
+
+}
 
 .form-group{
 
@@ -53,19 +55,60 @@ main{
   color: white;
 
 }
+
 .home{
   
   font-size: 1.5rem;
 
 }
 
-.h1-votacao{
 
+.h2-votacao {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
+  margin-top: 4rem;
+  z-index: 1000;
+  padding: 1rem 0;
+}
+
+
+.container-section2{
+ 
+  display: flex;
   color: white;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem;
+  margin-top: 30rem;
+  gap: 10rem;
+
+}
+
+.container-section3{
+
+  display: flex;
+  color: white;
+  margin-top: 10rem;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+
+}
+
+#container-enviar{
+  font-size: 1.5rem;
+  width: 15rem;
+  height: 4rem;
+  background-color: rgba(238, 118, 6, 0.418);
+  display: block;
+  margin-top: 5rem;
+  border-color: rgb(255, 132, 0);
 
 }
 
@@ -100,40 +143,6 @@ main{
   border-bottom-left-radius: 5rem;
   width:15rem;
   height: 10rem;
-  border-color: rgb(255, 132, 0);
-
-}
-
-.container-section2{
- 
-  display: flex;
-  color: white;
-  justify-content: center;
-  align-items: center;
-  padding: 5rem;
-  margin-top: 5rem;
-  gap: 10rem;
-
-}
-
-.container-section3{
-
-  display: flex;
-  color: white;
-  margin-top: 10rem;
-  justify-content: center;
-  align-items: center;
-  gap: 10rem;
-
-}
-
-#container-enviar{
-  font-size: 1.5rem;
-  width: 15rem;
-  height: 4rem;
-  background-color: rgba(238, 118, 6, 0.418);
-  display: block;
-  margin-top: 3rem;
   border-color: rgb(255, 132, 0);
 
 }
@@ -189,8 +198,6 @@ body {
 
 }
 
-
-
 .card-text{
 
   margin: 0;
@@ -198,7 +205,9 @@ body {
 }
 
 .container-cards{
+
   justify-content: center;
+
 }
 
 .container-p{
@@ -214,7 +223,25 @@ display: flex;
 
 }
 
+.container-footer {
 
+  background-color: rgba(238, 118, 6, 0.418);
+  border-radius: 1rem;
+  margin-top: 5rem;
+  padding: 1rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.container-footer .container-p {
+
+  gap: 20rem;
+
+
+}
 
 .icons{
 
@@ -249,7 +276,7 @@ display: flex;
 
   body{
 
-        height: 60rem;
+    height: 60rem;
 
   }
 
@@ -266,7 +293,7 @@ display: flex;
 
   body{
 
-        height: 60rem;
+    height: 60rem;
 
   }
 
@@ -281,7 +308,7 @@ display: flex;
 
   body{
 
-        height: 55rem;
+    height: 55rem;
 
   }
 
@@ -296,7 +323,7 @@ display: flex;
 
   body{
 
-        height: 55rem;
+    height: 55rem;
 
   }
 
@@ -312,7 +339,7 @@ display: flex;
 
   body{
 
-        height: 63rem;
+    height: 63rem;
 
   }
 
@@ -328,7 +355,7 @@ display: flex;
 
   body{
 
-        height: 64rem;
+    height: 64rem;
 
   }
 
@@ -340,36 +367,456 @@ display: flex;
 
 }
 
-.h2-votacao {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: var(--main-color);
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-  padding: 1rem 0;
-}
+@media (max-width:1199px){
 
-.container-footer {
+    .h2-votacao{
 
-  background-color: rgba(238, 118, 6, 0.418);
-  border-radius: 1rem;
-  margin-top: 5rem;
-  padding: 1rem;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+      margin-top: 2rem;
+      font-size: 2.5rem;
+
+    }
 
 }
 
-.container-footer .container-p {
 
-  gap: 20rem;
+@media (max-width:848px){
 
+  #container-header{
+
+    width: 54rem;
+
+  }
+
+  .h2-votacao{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+  }
+
+}
+
+@media (max-width:768px){
+
+  .h2-votacao{
+
+    margin-left: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 5rem;
+
+
+  }
+
+}
+
+@media (max-width:748px){
+
+  .h2-votacao{
+
+    margin-left: 3rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 6rem;
+    font-size: 1.5rem;
+
+
+  }
+
+}
+
+
+@media (max-width:735px){
+
+  .h2-votacao{
+
+    margin-left: 3rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 7rem;
+    font-size: 1.5rem;
+
+
+  }
+
+}
+
+@media (max-width:669px){
+
+  .h2-votacao{
+
+    margin-left: 5rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 11rem;
+    font-size: 1.5rem;
+
+
+  }
+
+}
+
+@media (max-width:620px){
+
+  .h2-votacao{
+
+    margin-left: 7rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 15rem;
+    font-size: 1.5rem;
+
+
+  }
+
+}
+
+
+@media (max-width:560px){
+
+  .h2-votacao{
+
+    margin-left: 9rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 19rem;
+    font-size: 1.5rem;
+
+
+  }
+
+}
+
+
+@media (max-width:518px){
+
+  .h2-votacao{
+
+    margin-left: 10rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 22rem;
+    font-size: 1.5rem;
+
+  }
+
+}
+
+@media (max-width:512px){
+
+  .h2-votacao{
+
+    margin-left: 10rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 22rem;
+    font-size: 1.5rem;
+
+  }
+
+  body {
+
+    background-position: absolute;
+    height: 80rem;
+  
+  }
+}
+
+@media (max-width:512px){
+
+  .h2-votacao{
+
+    margin-left: 10rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 25rem;
+    font-size: 1.5rem;
+
+  }
+
+  body {
+
+    background-position: absolute;
+    height: 80rem;
+  
+  }
+
+  .form{
+
+    margin-top: 10rem;
+
+  }
+}
+
+@media (max-width:512px){
+
+  .h2-votacao{
+
+    margin-left: 12rem;
+    font-size: 2rem;
+
+  }
+
+  .form{
+
+    margin-left: 28rem;
+    font-size: 1.5rem;
+
+  }
+
+  body {
+
+    background-position: absolute;
+    height: 90rem;
+  
+  }
+
+  .form{
+
+    margin-top: 12rem;
+
+  }
+}
+
+@media (max-width:513px){
+
+  body {
+
+    background-position: absolute;
+    height: 85rem;
+  
+  }
+  .form{
+
+    margin-top: 12rem;
+
+  }
+}
+
+@media (max-width:378px){
+
+  body {
+
+    background-position: absolute;
+    height: 87rem;
+  
+  }
+  .form{
+
+    margin-top: 15rem;
+    margin-left: 30rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+
+  }
+}
+
+@media (max-width:369px){
+
+  body {
+
+    background-position: absolute;
+    height: 90rem;
+  
+  }
+  .form{
+
+    margin-top: 15rem;
+    margin-left: 30rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-left: 13rem;
+
+  }
+}
+
+@media (max-width:369px){
+
+  body {
+
+    background-position: absolute;
+    height: 95rem;
+  
+  }
+  .form{
+
+    margin-top: 15rem;
+    margin-left: 30rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-left: 14rem;
+
+  }
+}
+
+@media (max-width:338px){
+
+  body {
+
+    background-position: absolute;
+    height: 98rem;
+  
+  }
+  .form{
+
+    margin-top: 15rem;
+    margin-left: 33rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-left: 16rem;
+
+  }
+
+}
+
+@media (max-width:327px){
+
+  body {
+
+    background-position: absolute;
+    height: 100rem;
+  
+  }
+  .form{
+
+    margin-top: 15rem;
+    margin-left: 33rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-left: 16rem;
+
+  }
+
+}
+
+@media (max-width:327px){
+
+  body {
+
+    background-position: absolute;
+    height: 110rem;
+  
+  }
+  .form{
+
+    margin-top: 15rem;
+    margin-left: 34rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-left: 17rem;
+
+  }
+
+}
+
+
+@media (max-width:291px){
+
+  body {
+
+    background-position: absolute;
+    height: 120rem;
+  
+  }
+  .form{
+
+    margin-top: 15rem;
+    margin-left: 34rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-left: 17rem;
+
+  }
+
+}
+
+
+
+@media (max-width:274px){
+
+  body {
+
+    background-position: absolute;
+    height: 120rem;
+  
+  }
+  .form{
+
+    margin-top: 30rem;
+    margin-left: 36rem;
+
+  }
+  .h2-votacao{
+
+    font-size: 2rem;
+    margin-top: 5rem;
+    margin-left: 16rem;
+
+  }
 
 }
