--- a/website/static/base.css
+++ b/website/static/base.css
@@ -351,472 +351,17 @@ display: flex;
 
 }
 
-@media (max-width:297px) {
-
-  body{
-
-    height: 64rem;
-
-  }
-
-  .container-footer{
-
-    margin-top: 10rem;
-
-  }
-
-}
-
-@media (max-width:1199px){
-
-    .h2-votacao{
-
+@media (max-width: 576px) {
+  .container-section2,
+  .container-section3 {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
       margin-top: 2rem;
-      font-size: 2.5rem;
-
-    }
-
-}
-
-
-@media (max-width:848px){
-
-  #container-header{
-
-    width: 54rem;
-
   }
 
-  .h2-votacao{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
+  .container-section2 .form-check,
+  .container-section3 .form-check {
+      margin-top: 1rem;
   }
-
-}
-
-@media (max-width:768px){
-
-  .h2-votacao{
-
-    margin-left: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 5rem;
-
-
-  }
-
-}
-
-@media (max-width:748px){
-
-  .h2-votacao{
-
-    margin-left: 3rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 6rem;
-    font-size: 1.5rem;
-
-
-  }
-
-}
-
-
-@media (max-width:735px){
-
-  .h2-votacao{
-
-    margin-left: 3rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 7rem;
-    font-size: 1.5rem;
-
-
-  }
-
-}
-
-@media (max-width:669px){
-
-  .h2-votacao{
-
-    margin-left: 5rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 11rem;
-    font-size: 1.5rem;
-
-
-  }
-
-}
-
-@media (max-width:620px){
-
-  .h2-votacao{
-
-    margin-left: 7rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 15rem;
-    font-size: 1.5rem;
-
-
-  }
-
-}
-
-
-@media (max-width:560px){
-
-  .h2-votacao{
-
-    margin-left: 9rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 19rem;
-    font-size: 1.5rem;
-
-
-  }
-
-}
-
-
-@media (max-width:518px){
-
-  .h2-votacao{
-
-    margin-left: 10rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 22rem;
-    font-size: 1.5rem;
-
-  }
-
-}
-
-@media (max-width:512px){
-
-  .h2-votacao{
-
-    margin-left: 10rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 22rem;
-    font-size: 1.5rem;
-
-  }
-
-  body {
-
-    background-position: absolute;
-    height: 80rem;
-  
-  }
-}
-
-@media (max-width:512px){
-
-  .h2-votacao{
-
-    margin-left: 10rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 25rem;
-    font-size: 1.5rem;
-
-  }
-
-  body {
-
-    background-position: absolute;
-    height: 80rem;
-  
-  }
-
-  .form{
-
-    margin-top: 10rem;
-
-  }
-}
-
-@media (max-width:512px){
-
-  .h2-votacao{
-
-    margin-left: 12rem;
-    font-size: 2rem;
-
-  }
-
-  .form{
-
-    margin-left: 28rem;
-    font-size: 1.5rem;
-
-  }
-
-  body {
-
-    background-position: absolute;
-    height: 90rem;
-  
-  }
-
-  .form{
-
-    margin-top: 12rem;
-
-  }
-}
-
-@media (max-width:513px){
-
-  body {
-
-    background-position: absolute;
-    height: 85rem;
-  
-  }
-  .form{
-
-    margin-top: 12rem;
-
-  }
-}
-
-@media (max-width:378px){
-
-  body {
-
-    background-position: absolute;
-    height: 87rem;
-  
-  }
-  .form{
-
-    margin-top: 15rem;
-    margin-left: 30rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-
-  }
-}
-
-@media (max-width:369px){
-
-  body {
-
-    background-position: absolute;
-    height: 90rem;
-  
-  }
-  .form{
-
-    margin-top: 15rem;
-    margin-left: 30rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-    margin-left: 13rem;
-
-  }
-}
-
-@media (max-width:369px){
-
-  body {
-
-    background-position: absolute;
-    height: 95rem;
-  
-  }
-  .form{
-
-    margin-top: 15rem;
-    margin-left: 30rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-    margin-left: 14rem;
-
-  }
-}
-
-@media (max-width:338px){
-
-  body {
-
-    background-position: absolute;
-    height: 98rem;
-  
-  }
-  .form{
-
-    margin-top: 15rem;
-    margin-left: 33rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-    margin-left: 16rem;
-
-  }
-
-}
-
-@media (max-width:327px){
-
-  body {
-
-    background-position: absolute;
-    height: 100rem;
-  
-  }
-  .form{
-
-    margin-top: 15rem;
-    margin-left: 33rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-    margin-left: 16rem;
-
-  }
-
-}
-
-@media (max-width:327px){
-
-  body {
-
-    background-position: absolute;
-    height: 110rem;
-  
-  }
-  .form{
-
-    margin-top: 15rem;
-    margin-left: 34rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-    margin-left: 17rem;
-
-  }
-
-}
-
-
-@media (max-width:291px){
-
-  body {
-
-    background-position: absolute;
-    height: 120rem;
-  
-  }
-  .form{
-
-    margin-top: 15rem;
-    margin-left: 34rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-    margin-left: 17rem;
-
-  }
-
-}
-
-
-
-@media (max-width:274px){
-
-  body {
-
-    background-position: absolute;
-    height: 120rem;
-  
-  }
-  .form{
-
-    margin-top: 30rem;
-    margin-left: 36rem;
-
-  }
-  .h2-votacao{
-
-    font-size: 2rem;
-    margin-top: 5rem;
-    margin-left: 16rem;
-
-  }
-
 }
