--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,13 +1,19 @@
+
+
 {% extends "base.html" %} {% block title %} Votar {% endblock %} {% block
 content %}
+
+
+
 <div
-  class="container mt-4 centered-element"
-  id="container-grupos"
-  align="center"
->
+  class="container mt-4 centered-element" id="container-home"
+  align="center">
+
   <form class="form" method="POST">
-    <section class="container-section2">
-      <h1 class="h2-votacao"> Projeto Cerrado à Mesa: Celebrando a agroindústria familiar <br> </h1>
+    
+    <h1 class="h1-votacao"> Projeto Cerrado à Mesa: Celebrando a agroindústria familiar </h1>
+
+    <section class="container-section1">
       <div
         class="form-check form-check-inline"
         onclick="document.getElementById('grupo1').checked = true;"
@@ -47,7 +53,7 @@ content %}
       </div>
     </section>
 
-    <section class="container-section3">
+    <section class="container-section1">
       <div
         class="form-check form-check-inline"
         onclick="document.getElementById('grupo3').checked = true;"
