--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,8 +21,11 @@
     <link rel="stylesheet" href="../static/base.css" />
     <title>{% block title %}Home{% endblock %}</title>
   </head>
-  <body>
-    <header>
+  <body class="container-body">
+
+    <img class="imagem-fundo" src="../static/img/imagem22.jpg" alt="imagem-fundo">
+
+    <header class = "container-header">
       <nav class="navbar navbar-expand-lg navbar-dark" id="container-header">
         <button
           class="navbar-toggler"
@@ -50,26 +53,30 @@
           </div>
         </div>
       </nav>
+   
     </header>
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-    messages %} {% for category, message in messages %} {% if category ==
-    'error' %}
-    <div class="alert alert-danger alter-dismissable fade show" role="alert">
-      {{ message }}
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% else %}
-    <div class="alert alert-success alter-dismissable fade show" role="alert">
-      {{ message }}
-      <button type="button" class="close" data-dismiss="alert">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-    <main class="container">{% block content %} {% endblock %}</main>
+    <div class="mensagem-alerta">
+      {% with messages = get_flashed_messages(with_categories=true) %} {% if
+        messages %} {% for category, message in messages %} {% if category ==
+        'error' %}
+        <div class="alert alert-danger alter-dismissable fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% else %}
+        <div class="alert alert-success alter-dismissable fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% endif %} {% endfor %} {% endif %} {% endwith %}
+    </div>
+  
+    <main class="container-main">{% block content %} {% endblock %}</main>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
