--- a/website/templates/resultado.html
+++ b/website/templates/resultado.html
@@ -1,11 +1,19 @@
 {% extends "base.html" %} {% block title %} Resultados {% endblock%} {% block
 content %}
-<h1 class="h1-votacao">Resultados da Votação</h1>
+
+<div class="container-resultado">
+
+  <div class="h1-resultado-votacao">
+
+    <h1 >Resultados da Votação</h1>
+
+  </div>
+
 <div class="flex-wrap row container-cards">
   {% for grupo, contagem in contagem_por_grupo %}
-  <div class="p-2 card cards container-wrap-card">
+  <div class="p-2 card container-wrap-card">
     <div class="card-body">
-      <h2 class="title-wrap">GRUPO {{ grupo }}</h2>
+      <h3 class="title-wrap">GRUPO {{ grupo }}</h3>
       <p class="card-text" id="votos">VOTOS: {{ contagem }}</p>
       <p class="card-text" id="porcentagem">
         Porcentagem dos Votos: {{ '%.2f' % ((contagem/total_votos) * 100) }}%
@@ -14,6 +22,7 @@ content %}
   </div>
   {% endfor %}
 </div>
+
 <footer class="container-footer">
   <div class="container-p">
     <h4>Desenvolvido Pelos Alunos</h4>
@@ -28,8 +37,9 @@ content %}
   </div>
 
   <div class="icons">
-    <i class="bi bi-whatsapp"><a href=""></a></i>
     <i class="bi bi-envelope"><a href=""></a></i>
   </div>
 </footer>
+</div>
+
 {% endblock %}
