--- a/website/templates/resultado.html
+++ b/website/templates/resultado.html
@@ -27,12 +27,12 @@ content %}
   <div class="container-p">
     <h4>Desenvolvido Pelos Alunos</h4>
     <p>
-      Matheus Dias Landim , 
-      Jean Victor Rodrigues Pereira<br />
-      Vicente Henrique de Oliveira ,
-      Pablo Henrique Gonçalves<br />
+      Matheus Dias Landim, 
+       Jean Victor Rodrigues Pereira<br />
+      Vicente Henrique de Oliveira,
+       Pablo Henrique Gonçalves<br />
       Artur Machado Dias, 
-      Luan Cristian
+       Luan Cristian Elias
     </p>
   </div>
 </footer>
