--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,17 +1,11 @@
-
-
 {% extends "base.html" %} {% block title %} Votar {% endblock %} {% block
 content %}
 
-
-
-<div
-  class="container mt-4 centered-element" id="container-home"
-  align="center">
-
+<div class="container mt-4 centered-element" id="container-home" align="center">
   <form class="form" method="POST">
-    
-    <h1 class="h1-votacao"> Projeto Cerrado à Mesa: Celebrando a agroindústria familiar </h1>
+    <h1 class="h1-votacao">
+      Projeto Cerrado à Mesa: Celebrando a agroindústria familiar
+    </h1>
 
     <section class="container-section1">
       <div
