--- a/website/templates/resultado.html
+++ b/website/templates/resultado.html
@@ -2,42 +2,34 @@
 content %}
 
 <div class="container-resultado">
-
   <div class="h1-resultado-votacao">
-
-    <h1 >Resultados da Votação</h1>
-
+    <h1>Resultados da Votação</h1>
   </div>
 
-<div class="flex-wrap row container-cards" id="cards-resultados">
-  {% for grupo, contagem in contagem_por_grupo %}
-  <div class="p-2 card container-wrap-card" id="cards-resultados1">
-    <div class="card-body">
-      <h3 class="title-wrap">GRUPO {{ grupo }}</h3>
-      <p class="card-text" id="votos">VOTOS: {{ contagem }}</p>
-      <p class="card-text" id="porcentagem">
-        Porcentagem dos Votos: {{ '%.2f' % ((contagem/total_votos) * 100) }}%
+  <div class="flex-wrap row container-cards" id="cards-resultados">
+    {% for grupo, contagem in contagem_por_grupo %}
+    <div class="p-2 card container-wrap-card" id="cards-resultados1">
+      <div class="card-body">
+        <h3 class="title-wrap">GRUPO {{ grupo }}</h3>
+        <p class="card-text" id="votos">VOTOS: {{ contagem }}</p>
+        <p class="card-text" id="porcentagem">
+          Porcentagem dos Votos: {{ '%.2f' % ((contagem/total_votos) * 100) }}%
+        </p>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+
+  <footer class="container-footer">
+    <div class="container-p">
+      <h4>Desenvolvido Pelos Alunos</h4>
+      <p>
+        Matheus Dias Landim, Jean Victor Rodrigues Pereira<br />
+        Vicente Henrique de Oliveira, Pablo Henrique Gonçalves<br />
+        Artur Machado Dias, Luan Cristian Elias
       </p>
     </div>
-  </div>
-  {% endfor %}
-</div>
-
-<footer class="container-footer">
-  <div class="container-p">
-    <h4>Desenvolvido Pelos Alunos</h4>
-    <p>
-      Matheus Dias Landim, 
-       Jean Victor Rodrigues Pereira<br />
-      Vicente Henrique de Oliveira,
-       Pablo Henrique Gonçalves<br />
-      Artur Machado Dias, 
-       Luan Cristian Elias
-    </p>
-  </div>
-</footer>
-
-
+  </footer>
 </div>
 
 {% endblock %}
